--- a/index.html
+++ b/index.html
@@ -3,9 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Site Escola</title>
+    <title>Site Escola</title> 
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+<header>
+    <img src="./img/img1.png" alt="">
+    <ul>
+    <li>Estudante</li>
+    <li>Escola</li>
+    <ul>
     
-</body>
+<header>
 </html>
